--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .header {
-  border-style:dotted;
-  background-color: #260de3;
-  color:red;
+  border-style:solid;
+  background-color: #000000;
+  color:#FFFFFF;
   display: block;
   margin-left: auto;
   margin-right: auto;
