--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@
   text-decoration-line: underline;
 }
 .car_models {
-    display: inline-block;
-    margin-right:5px;
-    border:1px solid #ccc;
+  width: 25%;
+  height: auto;
+  display: inline-block;
+  margin-right:5px;
+  border:1px solid #ccc;
 }
