--- a/style.css
+++ b/style.css
@@ -29,6 +29,6 @@
   width: 25%;
   height: auto;
   display: inline-block;
-  margin-right:5px;
-  border:1px solid #ccc;
+  margin-left: auto;
+  margin-right: auto;
 }
