--- a/style.css
+++ b/style.css
@@ -28,7 +28,12 @@
 .car_models {
   width: 25%;
   height: auto;
-  display: inline-block;
+  border-style:solid;
+  background-color: #000000;
+  color:#FFFFFF;
+  display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+  text-decoration-line: underline;
 }
