--- a/style.css
+++ b/style.css
@@ -33,3 +33,13 @@
   margin: 0px;
   padding: 0px;
 }
+.poll {
+  border-style:solid;
+  background-color: #000000;
+  color:#FFFFFF;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  text-decoration-line: underline;
+  }
