--- a/style.css
+++ b/style.css
@@ -28,10 +28,14 @@
 .car_models {
   width: 25%;
   height: auto;
-  display: inline-block;
-  float:left;
-  margin: 0px;
-  padding: 0px;
+  border-style:solid;
+  background-color: #000000;
+  color:#FFFFFF;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  text-decoration-line: underline;
 }
 #poll {
   border-style:solid;
