--- a/style.css
+++ b/style.css
@@ -47,3 +47,13 @@
   text-align: center;
   text-decoration-line: underline;
   }
+  .content {
+    border-style:solid;
+    background-color: #000000;
+    color:#FFFFFF;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    text-decoration-line: underline;
+  }
