--- a/style.css
+++ b/style.css
@@ -57,3 +57,10 @@
     text-align: center;
     text-decoration-line: underline;
   }
+.row {
+  display: flex;
+}
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
