--- a/style.css
+++ b/style.css
@@ -57,13 +57,10 @@
     text-align: center;
     text-decoration-line: underline;
   }
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+  .row {
+    display: flex;
   }
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
-}
+  .column {
+    flex: 33.33%;
+    padding: 5px;
+  }
