--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@
     display: flex;
   }
   .column {
-    flex: 100%;
+    flex: 33.3%;
     padding: 5px;
+    height: 100%;
+    width: auto;
   }
