--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .header {
+  border-style:solid;
   background-color: #000000;
   color:#FFFFFF;
   display: block;
@@ -15,6 +16,7 @@
   height: auto;
 }
 .footer {
+  border-style:solid;
   background-color: #000000;
   color:#FFFFFF;
   display: block;
@@ -26,6 +28,7 @@
 .car_models {
   width: 25%;
   height: auto;
+  border-style:solid;
   background-color: #000000;
   color:#FFFFFF;
   display: block;
@@ -35,6 +38,7 @@
   text-decoration-line: underline;
 }
 #poll {
+  border-style:solid;
   background-color: #000000;
   color:#FFFFFF;
   display: block;
@@ -44,6 +48,7 @@
   text-decoration-line: underline;
   }
   .content {
+    border-style:solid;
     background-color: #000000;
     color:#FFFFFF;
     display: block;
@@ -64,6 +69,7 @@
   color:#FFFFFF;
 }
 .sub_footer {
+  border-style:solid;
   background-color: #000000;
   color:#FFFFFF;
   display: block;
